--- a/public/styles.css
+++ b/public/styles.css
@@ -11,5 +11,19 @@
   width: 300px;
   height: 250px;
   display: block;
-  background-color: #fff;
+  background-color: #cccccc;
+  margin: 10px;
+}
+
+.header-float-right {
+  float: right;
+}
+
+.file-btn {
+  margin: 10px;
+  padding: 0px;
+}
+
+.submit-btn {
+  
 }
